--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "@payloadcms/db-mongodb": "^1.1.1",
     "@payloadcms/richtext-slate": "^1.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "init": "^0.1.2",
+    "input": "^1.0.1",
+    "label": "^0.2.2",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "payload": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "shadcn-ui": "^0.4.1",
+    "shadcn-ui": "^0.5.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
