created verify-email end point and verification email sending

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PAYLOAD_SECRET=i$2vn!"bEtEFfG8z(OkE{2#'Vx"091
 MONGODB_URL=mongodb+srv://sashashkut:9FSgv6VHejIjJ3O4@cluster0.aqj27jq.mongodb.net/?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_gCJ5yx3f_Ap4u6PsYkZVnVRihzkq9Q4qe
