Stopped tracking env.local, and env.staging

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
     "extends":"./tsconfig.json",
     "compilerOptions": {
         "module": "CommonJS",
-        "outDir": "Dist",
+        "outDir": "dist",
         "noEmit": false,
         "jsx": "react"
     },
